--- a/client/codeshare/room.html
+++ b/client/codeshare/room.html
@@ -5,6 +5,6 @@
 
  <div class="video-wrapper">
     <div class="col-md-2">
-      <video ng-src="{{getLocalVideo()}}" autoplay muted></video>
+      <video class="localvideo" ng-src="{{getLocalVideo()}}" autoplay muted></video>
     </div>
 </div>
